--- a/gallery.css
+++ b/gallery.css
@@ -60,6 +60,13 @@ img {
 	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
+footer {
+	margin-top: 25px;
+	padding: 10px;
+	border-top: 2px solid #675F6F;
+	font-family: 'Montserrat', sans-serif;
+}
+
 .galleryContainer {
 	width: 70%;
 	margin: auto;
@@ -105,6 +112,6 @@ img {
 	margin-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 90%;
     text-align: center;
 }
