--- a/gallery.css
+++ b/gallery.css
@@ -45,6 +45,23 @@ li {
 	box-shadow: 0 5px 10px rgba(0,0,0,0.19), 0 3px 3px rgba(0,0,0,0.23);
 }
 
+.active {
+	background-color: #656565;
+}
+
+.active a {
+	color: #ffffff;
+}
+
+.arrow {
+	width: 25px;
+	background-color: #656565;
+}
+
+.arrow a {
+	color: #ffffff;
+}
+
 li:hover {
 	background-color: #272727;
 }
