--- a/gallery.css
+++ b/gallery.css
@@ -132,3 +132,11 @@ footer {
     width: 90%;
     text-align: center;
 }
+
+.paginationLowerContainer {
+	margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+    text-align: center;
+}
